install and integrated socialite

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -371,6 +371,11 @@ body {
   width: 56px;
   height: 56px;
   margin-left: 10px;
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
 }
 
 .navbar .navbar-nav .nav-link {
